# palace-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: compile_options.cmake  project_warnings.cmake  utilities.cmake  warnings.cmake
include/core/: dynamic_array.hpp  engine_context.hpp  engine_object.hpp  object.hpp  object_container.hpp  result.hpp
include/debug/: assert.hpp
include/formatting/: formatters.hpp  formatting.hpp
include/graphics/: graphics_api.hpp  graphics_api_object.hpp  graphics_context.hpp  graphics_device.hpp  graphics_render_target.hpp  graphics_support.hpp
include/graphics/vulkan/: vulkan_context.hpp  vulkan_formatters.hpp  vulkan_includes.hpp  vulkan_version.hpp  vulkan_winapi_context.hpp
include/logging/: formatters.hpp  log_level.hpp  log_target.hpp  logger.hpp
include/logging/targets/: file_log_target.hpp
include/math/: math.hpp  math_formatters.hpp
include/memory/: alloc.hpp  default_allocator.hpp  heap_allocator.hpp
include/os/: application_context.hpp  display_device.hpp  window.hpp  window_manager.hpp  window_server.hpp
include/os/cocoa/: cocoa_application_context.hpp  cocoa_display_device.hpp  cocoa_engine_context.hpp  cocoa_window.hpp  cocoa_window_server.hpp
include/os/cocoa/binding/: cocoa_interface.h  cocoa_interface_context.h  cocoa_interface_internal_types.h  cocoa_interface_monitor.h  cocoa_interface_window.h
include/os/winapi/: winapi_application_context.hpp  winapi_display_device.hpp  winapi_engine_context.hpp  winapi_window.hpp  winapi_window_server.hpp
include/os/windows/: windows_application_context.hpp  windows_display_device.hpp  windows_engine_context.hpp  windows_window.hpp  windows_window_manager.hpp  windows_window_server.hpp
include/platform/: disable_warnings.hpp  enable_warnings.hpp  entry_point.hpp  platform.hpp  platform_detection.hpp  platform_includes.hpp  platform_object.hpp
include/types/: limits.hpp  string.hpp
src/core/: dynamic_array.cpp  engine_context.cpp  engine_object.cpp  object_container.cpp
src/graphics/: graphics_api_object.cpp  graphics_context.cpp  graphics_device.cpp  graphics_render_target.cpp
src/graphics/vulkan/: vulkan_context.cpp  vulkan_winapi_context.cpp
src/logging/: log_target.cpp  logger.cpp
src/logging/targets/: file_log_target.cpp
src/memory/: default_allocator.cpp
src/os/: application_context.cpp  display_device.cpp  window.cpp  window_manager.cpp  window_server.cpp
src/os/cocoa/: cocoa_application_context.cpp  cocoa_display_device.cpp  cocoa_engine_context.cpp  cocoa_window.cpp  cocoa_window_server.cpp
src/os/cocoa/binding/: cocoa_interface_context.m  cocoa_interface_context.mm  cocoa_interface_monitor.mm  cocoa_interface_window.mm
src/os/winapi/: winapi_application_context.cpp  winapi_display_device.cpp  winapi_engine_context.cpp  winapi_window.cpp  winapi_window_server.cpp
src/os/windows/: windows_application_context.cpp  windows_display_device.cpp  windows_engine_context.cpp  windows_window.cpp  windows_window_manager.cpp  windows_window_server.cpp
src/platform/: platform.cpp  platform_object.cpp
test/: dynamic_array_test.cpp  heap_allocator_test.cpp  logger_test.cpp  object_container_test.cpp  object_test.cpp  sanity_test.cpp
